# DjangoPollsTutorialDIO

./: build.sh  db.sqlite3  pyproject.toml
accounts/: views.py
accounts/templates/accounts/: login.html
contacts/: forms.py  models.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html  name.html
mysite/: admin.py  settings.py  urls.py
polls/: admin.py  apps.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_rename_pub_data_question_pub_date.py  0004_alter_choice_question.py  0005_alter_choice_options_alter_question_options_and_more.py
tests/contacts/: test_forms.py  test_views.py
tests/polls/: test_models.py
